# chain-fox-stake

./: .env  .gitignore  Anchor.toml  Cargo.toml  LICENSE  README-zh.md  README.md  multisig-wallet.json  package.json
.cargo/: config.toml
migrations/: calculate-rent.js  deploy.js
programs/cfx-stake-core/: Cargo.toml
programs/cfx-stake-core/src/: lib.rs
tests/: initialize-only.js  solana-stake.js
