[workspace]
resolver = "2"
members = [
    "programs/*"
]

# 指定新程序的依赖关系
[workspace.dependencies]
anchor-lang = "0.26.0"
anchor-spl = "0.26.0"
solana-program = "1.18.26"

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1
[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1
